--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,34 @@
 <resources>
     <string name="app_name">soba</string>
+
+    <string name="ebisu_text">098−944−3575
+        \n沖縄県島尻郡与那原町字東浜68−1
+        \n営業時間
+        \n11：00〜21：00（L.O.20：30）　日曜営業
+        \n定休日
+        \n・年中無休
+        \n完全禁煙
+        \n席数　100席
+        \n駐車　マリンプラザ東浜駐車場
+    </string>
+    <string name="yonabaruya_text">
+        098−945−8958
+        \n沖縄県島尻郡与那原町与那原1040
+        \n営業時間
+        \n11：00〜22：00　日曜営業
+        \n定休日
+        \n・旧盆・正月
+        \n席数
+        \n８０近く
+        \n駐車場　有
+    </string>
+    <string name="mingei_text">098−945−3154
+\n沖縄県与那原町字与那原433
+\n営業時間
+\n11：00〜16：00　日曜営業
+\n定休日
+\n・木曜日
+\n席数　24人
+\n駐車場　有り
+</string>
 </resources>
